<resources>
    <string name="app_name" translatable="false">OpenWebNet</string>
    <string name="app_version">version</string>
    <string name="app_version_number" translatable="false">3.2.2</string>
    <string name="app_link" translatable="false">https://github.com/openwebnet</string>
    <string name="url_terms_conditions" translatable="false">https://termsfeed.com/terms-conditions/f21f31b35e4569354fe47c11345ede48</string>
    <string name="url_privacy_policy" translatable="false">https://termsfeed.com/privacy-policy/774d76cf112e2cfe571eafc89f70de15</string>
    <string name="activity_device">Device</string>
    <string name="activity_light">Light</string>
    <string name="activity_automation">Automation</string>
    <string name="activity_ipcam">IP Camera</string>
    <string name="activity_temperature">Temperature</string>
    <string name="activity_scenario">Scenario</string>
    <string name="activity_energy">Power Consumption</string>
    <string name="activity_sound">Sound System</string>
    <string name="activity_profiles">Profiles</string>
    <string name="activity_settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="menu_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_apply">Apply</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_share">Share</string>
    <string name="menu_profile_logout">Logout</string>
    <string name="fab_profile_label_create">Create</string>
    <string name="fab_profile_label_reset">Reset</string>
    <string name="drawer_menu_favourite">Favourites</string>
    <string name="drawer_menu_add">Add environment</string>
    <string name="drawer_menu_profile">Profiles</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_donation">Donation</string>
    <string name="drawer_menu_changelog">Info</string>
    <string name="drawer_menu_example">Example environment</string>
    <string name="dialog_add_environment_title">Add environment</string>
    <string name="dialog_edit_environment_title">Edit environment</string>
    <string name="dialog_environment_name">Name</string>
    <string name="dialog_device_confirmation_title">Confirmation request</string>
    <string name="dialog_device_confirmation_message">\nAre you sure?</string>
    <string name="dialog_profile_create_title">Create profile</string>
    <string name="dialog_profile_rename_title">Rename profile</string>
    <string name="dialog_profile_edit_name">Name</string>
    <string name="dialog_profile_create_message_1">Creates a backup of the current configurations on this device</string>
    <string name="dialog_profile_create_message_2">You will be then able to restore it also on a different device with the same Google account or share it with other users</string>
    <string name="dialog_profile_reset_title">Reset profile</string>
    <string name="dialog_profile_reset_message">Your current profile and all unsaved changes will be permanently deleted from the phone.\n\nAre you sure?</string>
    <string name="dialog_profile_logout_title">Logout</string>
    <string name="dialog_profile_logout_message">\nAre you sure?</string>
    <string name="dialog_profile_switch_title">Apply profile</string>
    <string name="dialog_profile_switch_message">All unsaved changes to the current profile will be deleted and overwritten.\n\nAre you sure?</string>
    <string name="dialog_profile_share_title">Share profile</string>
    <string name="dialog_profile_share_email_prefix">Email prefix</string>
    <string name="dialog_profile_share_email_suffix" translatable="false">\@gmail.com</string>
    <string name="dialog_profile_share_info_1">Example: if you want to share this profile with other.user@gmail.com, type \"other.user\" only</string>
    <string name="dialog_profile_share_info_2">To be able to share this profile, the other user need to login at least once with his Google account on his device</string>
    <string name="dialog_profile_share_info_3">Once shared, even if you delete this profile, the other user will still be able to access it and share it with other users</string>
    <string name="dialog_profile_share_info_4">Upon success, both users will receive a notification via mail</string>
    <string name="dialog_profile_share_checkbox">I take every responsibility to share this profile with anyone who has access to the provided email</string>
    <string name="dialog_profile_share_message">Are you sure?</string>
    <string name="dialog_profile_delete_title">Delete profile</string>
    <string name="dialog_profile_delete_message">You won\'t be able to access and apply this profile anymore.\n\nAre you sure?</string>
    <string name="dialog_donation_title">Donation</string>
    <string name="dialog_donation_tax">Donations are tax excluded and may vary from one country to another</string>
    <string name="error_load_navigation_drawer">Error loading navigation drawer</string>
    <string name="error_authentication">Authentication failed</string>
    <string name="error_connection">Connection unavailable</string>
    <string name="error_request">Request failed</string>
    <string name="error_profile_max">Maximum number of allowed profiles exceeded</string>
    <string name="error_profile_incompatible">Please update the app, this profile was created with a more recent version and it might be incompatible</string>
    <string name="validation_required">Required field</string>
    <string name="validation_host">Invalid ip address or domain</string>
    <string name="validation_port">Invalid port range</string>
    <string name="validation_url">Invalid url</string>
    <string name="validation_bad_value">Value not allowed</string>
    <string name="settings_category_shortcuts">Shortcuts</string>
    <string name="settings_title_wireless">Wireless &amp; networks</string>
    <string name="settings_category_gateway">Gateway</string>
    <string name="settings_gateway_add">Add gateway</string>
    <string name="settings_gateway_default">Default gateway</string>
    <string name="settings_gateway_default_dialog">Choose default gateway</string>
    <string name="dialog_gateway_host">Host*</string>
    <string name="dialog_gateway_host_hint">Ip Address or Domain</string>
    <string name="dialog_gateway_port">Port*</string>
    <string name="dialog_gateway_port_default">20000</string>
    <string name="dialog_gateway_password">Password (optional)</string>
    <string name="dialog_gateway_password_hint">Password</string>
    <string name="dialog_gateway_password_default">Leave this field empty unless is needed.\nDefault password is 12345.</string>
    <string name="settings_category_debug">Debug</string>
    <string name="settings_debug_device_title">Debug device messages</string>
    <string name="settings_debug_device_summary">Show delay and response value</string>
    <string name="settings_category_temperature">Temperature</string>
    <string name="settings_temperature_default">Default temperature scale</string>
    <string name="settings_temperature_default_dialog">Choose temperature scale</string>
    <string name="settings_category_info">Information</string>
    <string name="settings_info_terms_conditions">Terms and Conditions</string>
    <string name="settings_info_privacy_policy">Privacy Policy</string>
    <string name="changelog_title">Info</string>
    <string name="changelog_header_version">"Version "</string>
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_close">Close</string>
    <string name="label_none">None</string>
    <string name="label_name">Name</string>
    <string name="label_missing_gateway">Missing gateway</string>
    <string name="bs_title">Add</string>
    <string name="bs_device">Device</string>
    <string name="bs_light">Light</string>
    <string name="bs_automation">Automation</string>
    <string name="bs_temperature">Temperature</string>
    <string name="bs_ipcam">IP Camera</string>
    <string name="bs_scenario">Scenario</string>
    <string name="bs_energy">Power\nConsumption</string>
    <string name="bs_sound">Sound\nSystem</string>
    <string name="fa_asterisk" translatable="false">&#xf069;</string>
    <string name="fa_hashtag" translatable="false">&#xf292;</string>
    <string name="fa_hashtag_double" translatable="false">&#xf292;&#xf292;</string>
    <string name="list_empty">No items found</string>
    <string name="device_where">where</string>
    <string name="device_bus">bus</string>
    <string name="device_favourite">Favourite</string>
    <string name="device_confirm">Show confirmation alert</string>
    <string name="device_on_load">Send request on load event</string>
    <string name="device_accept">I know what I\'m doing! (Disclaimer)</string>
    <string name="device_request">Request</string>
    <string name="device_response">Response</string>
    <string name="device_response_paste">Paste</string>
    <string name="device_value">value</string>
    <string name="device_expected_value">expected value</string>
    <string name="device_debug_label" translatable="false">Debug response</string>
    <string name="device_debug_label_invalid">Invalid paste</string>
    <string name="device_label_general">General</string>
    <string name="device_label_general_bus">General (Bus)</string>
    <string name="device_label_area">Area</string>
    <string name="device_label_area_bus">Area (Bus)</string>
    <string name="device_label_group">Group</string>
    <string name="device_label_group_bus">Group (Bus)</string>
    <string name="light_request">Request Turn On</string>
    <string name="light_prefix_default" translatable="false">*1*1*</string>
    <string name="light_prefix_group" translatable="false">*1*1*#</string>
    <string name="light_prefix_bus" translatable="false">#4#</string>
    <string name="light_suffix" translatable="false">##</string>
    <string name="light_value_general" translatable="false">*1*1*0##</string>
    <string name="light_value_general_bus" translatable="false">*1*1*0</string>
    <string name="light_info_area">Allowed values: 00, 1&#8211;9, 100</string>
    <string name="light_info_group">Allowed values: 1&#8211;255</string>
    <string name="light_info_point_to_point">Where = Area + Light Id</string>
    <string name="light_info_bus">Allowed Bus values: 0[1&#8211;9] or 1[1&#8211;5]</string>
    <string name="light_label_point_to_point">Lighting point</string>
    <string name="light_label_point_to_point_bus">Lighting point (Bus)</string>
    <string name="automation_request">Request Stop</string>
    <string name="automation_suffix" translatable="false">##</string>
    <string name="scenario_request">Request Start</string>
    <string name="scenario_prefix" translatable="false">*17*1*</string>
    <string name="scenario_suffix" translatable="false">##</string>
    <string name="scenario_support">Supports MH200N and MH202</string>
    <string name="energy_request">Request Power Consumption</string>
    <string name="energy_prefix_v1" translatable="false">*#18*5</string>
    <string name="energy_suffix_v1" translatable="false">*X##</string>
    <string name="energy_info_best_effort">The gateway does not always respond properly and some values ​​may be partial or incorrect.\nMoreover you should keep this component separated from the other to avoid slowdowns.</string>
    <string name="sound_request">Request Turn On</string>
    <string name="sound_prefix_stereo" translatable="false">*16*3*</string>
    <string name="sound_suffix" translatable="false">##</string>
</resources>