<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bs_add_light"
        android:icon="@drawable/lightbulb_outline"
        android:title="@string/bs_light"/>
    <item
        android:id="@+id/bs_add_automation"
        android:icon="@drawable/blinds_white"
        android:title="@string/bs_automation"/>
    <item
        android:id="@+id/bs_add_temperature"
        android:icon="@drawable/thermometer"
        android:title="@string/bs_temperature"/>
    <item
        android:id="@+id/bs_add_scenario"
        android:icon="@drawable/cube_outline"
        android:title="@string/bs_scenario"/>
    <item
        android:id="@+id/bs_add_device"
        android:icon="@drawable/remote"
        android:title="@string/bs_device"/>
    <item
        android:id="@+id/bs_add_ipcam"
        android:icon="@drawable/webcam"
        android:title="@string/bs_ipcam"/>
</menu>