<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <EditText
            android:id="@+id/editTextDeviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/label_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/device_request"
            android:textStyle="bold|italic"/>

        <LinearLayout
            style="@style/device.linearLayout">

            <com.github.openwebnet.view.custom.EditTextCustom
                android:id="@+id/editTextDeviceRequest"
                style="@style/device.editText"
                android:hint="@string/device_value"
                app:font="inconsolata"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/textViewDeviceResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/device_response"
                android:textStyle="bold|italic"/>

            <TextView
                android:id="@+id/textViewDevicePasteResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="6dp"
                android:layout_toLeftOf="@+id/imageButtonDevicePasteResponse"
                android:text="@string/device_response_paste"
                android:textStyle="italic"/>

            <ImageButton
                android:id="@+id/imageButtonDevicePasteResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/content_paste"
                tools:ignore="MissingPrefix"/>
        </RelativeLayout>

        <LinearLayout
            style="@style/device.linearLayout">

            <com.github.openwebnet.view.custom.EditTextCustom
                android:id="@+id/editTextDeviceResponse"
                style="@style/device.editText"
                android:hint="@string/device_expected_value"
                app:font="inconsolata"/>
        </LinearLayout>

        <include
            layout="@layout/activity_common_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/checkBoxDeviceRunOnLoad"
            style="@style/device.checkBox"
            android:text="@string/device_on_load"/>

        <CheckBox
            android:id="@+id/checkBoxDeviceConfirm"
            style="@style/device.checkBox"
            android:checked="true"
            android:text="@string/device_confirm"/>

        <CheckBox
            android:id="@+id/checkBoxDeviceAccept"
            style="@style/device.checkBox"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/device_accept"/>

    </LinearLayout>

</ScrollView>