<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:typeface="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextEnergyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/label_name"
            android:inputType="text"
            android:maxLength="50" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/energy_request"
            android:textStyle="bold|italic" />

        <LinearLayout style="@style/message.linearLayout">

            <com.github.openwebnet.view.custom.TextViewCustom
                android:id="@+id/textViewEnergyPrefix"
                style="@style/message.textViewFontCustom"
                android:text="@string/energy_prefix_v1"
                android:textSize="24sp"
                typeface:font="inconsolata" />

            <com.github.openwebnet.view.custom.EditTextCustom
                android:id="@+id/editTextEnergyWhere"
                style="@style/message.editText"
                android:layout_width="100dp"
                android:hint="@string/device_where"
                android:maxLength="3"
                android:textSize="24sp"
                typeface:font="inconsolata" />

            <com.github.openwebnet.view.custom.TextViewCustom
                android:id="@+id/textViewEnergySuffix"
                style="@style/message.textViewFontCustom"
                android:text="@string/energy_suffix_v1"
                android:textSize="24sp"
                typeface:font="inconsolata" />

        </LinearLayout>

        <Spinner
            android:id="@+id/spinnerEnergyVersion"
            style="@style/common.focusable"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp" />

        <include
            layout="@layout/activity_common_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="16dp"
            android:text="@string/energy_info_best_effort"
            android:textStyle="italic" />

    </LinearLayout>

</ScrollView>