<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextSoundName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/label_name"
            android:inputType="text"
            android:maxLength="50" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/sound_request"
            android:textStyle="bold|italic" />

        <LinearLayout style="@style/message.linearLayout">

            <com.github.openwebnet.view.custom.TextViewCustom
                android:id="@+id/textViewSoundPrefix"
                style="@style/message.textViewFontCustom"
                android:text="@string/sound_prefix_stereo"
                app:font="inconsolata" />

            <com.github.openwebnet.view.custom.EditTextCustom
                android:id="@+id/editTextSoundWhere"
                style="@style/message.editText"
                android:hint="@string/device_where"
                app:font="inconsolata" />

            <com.github.openwebnet.view.custom.TextViewCustom
                android:id="@+id/textViewSoundSuffix"
                style="@style/message.textViewFontCustom"
                android:text="@string/sound_suffix"
                app:font="inconsolata" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewSoundInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text=""
            android:textStyle="italic"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinnerSoundSource"
            style="@style/common.focusable"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinnerSoundType"
            style="@style/common.focusable"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp" />

        <include
            layout="@layout/activity_common_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>